# math

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build_checks.yml  cmake.yml
cmake/: clang-format.cmake  clang-tidy.cmake  cppcheck.cmake  utils.cmake
include/math/: base.h  bounds2.h  bounds3.h  constants.h  geometry.h  math.h  matrix4x4.h  normal3.h  normal3t.h  point2.h  point2t.h  point3.h  point3t.h  point4.h  point4t.h  prettyprint.h  projections.h  quaternion.h  rng.h  rotator.h  transform.h  vector2.h  vector2t.h  vector3.h  vector3t.h  vector4.h  vector4t.h
include/math/impl/: normal3.h  point2.h  point3.h  point4.h  vector2.h  vector3.h  vector4.h
install-dir/include/math/: base.h  bounds2.h  export.h  math.h  normal3.h  point3.h  rng.h  rotator.h  transform.h
install-dir/lib/cmake/GTest/: GTestTargets-debug.cmake  GTestTargets.cmake
src/: CMakeLists.txt  base.cpp  bounds2.cpp  bounds3.cpp  math.cpp  matrix4x4.cpp  normal3.cpp  point2.cpp  point3.cpp  point4.cpp  prettyprint.cpp  projections.cpp  quaternion.cpp  rng.cpp  rotator.cpp  transform.cpp  vector2.cpp  vector3.cpp  vector4.cpp
test/: base-test.cpp  matrix4x4-test.cpp  misc-test.cpp  point2-test.cpp  projections-test.cpp  quaternion-test.cpp  transform-test.cpp  vector2-test.cpp
tests/: CMakeLists.txt  base-test.cpp  base_test.cpp  bounds2-test.cpp  bounds2_test.cpp  bounds3-test.cpp  bounds3_test.cpp  main_test.cpp  matrix4x4_test.cpp  misc-test.cpp  misc_test.cpp  normal3-test.cpp  normal3_test.cpp  normal3t-test.cpp  point2_test.cpp  point2t-test.cpp  point3_test.cpp  point3t-test.cpp  point4_test.cpp  point4t-test.cpp  projections-test.cpp  projections_test.cpp  quaternion-test.cpp  quaternion_test.cpp  realexpect.h  test_main.cpp  transform-test.cpp  transform_test.cpp  vector2-test.cpp  vector2_test.cpp  vector2t-test.cpp  vector3_test.cpp  vector3t-test.cpp  vector4-test.cpp  vector4_test.cpp  vector4t-test.cpp
